# tender-cli

./: .env.example  README.md  design.MD  pyproject.toml
examples/: MCP_BASE_USAGE.md  basic_usage.py  custom_tools_example.py  math_client_example.py  math_server_example.py
src/tender_cli/: __init__.py  main.py
src/tender_cli/core/: __init__.py  config.py  conversation.py  project_manager.py  tender_ai.py
src/tender_cli/mcp_tools/: __init__.py  base.py  content_tools.py  document_tools.py  file_tools.py  mcp_agent.py  mcp_server.py  tender_tools.py
src/tender_cli/prompts/: __init__.py  prompt_library.py
src/tender_cli/utils/: __init__.py  ai_client.py  logger.py
tests/: test_basic.py
